syntax = "proto3";
option go_package = "user;user";

message BaseResp{
  int64 status_code = 1;
  string status_msg = 2;
}
message RegisterRequest{
  string user_name = 1; // UserName
  string pass_word = 2; // PassWord
}

message RegisterResponse{
  BaseResp resp = 1;
  int64 id = 2;
}
service UserService{
  rpc Register(RegisterRequest) returns (RegisterResponse){};
}
message User{
  int64  id = 1;
  string user_name = 2;
  int64 follow_count = 3;
  int64 follower_count = 4;
  bool is_follow = 5;
}