syntax = "proto3";
option go_package = "user;user";

import "user.proto";
service VideoService {
  // 上传文件
  rpc Upload(PublishListRequest) returns (PublishListResponse){};
}

message PublishListRequest {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
}

message PublishListResponse {
  BaseResp resp = 1;
  //  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  //  string status_msg = 2; // 返回状态描述
  Video video_list = 3; // 用户发布的视频列表
}

message Video {
  int64 id = 1; // 视频唯一标识
  User   author = 2; // 视频作者信息
  string play_url = 3; // 视频播放地址
  string cover_url = 4; // 视频封面地址
  int64 favorite_count = 5; // 视频的点赞总数
  int64 comment_count = 6; // 视频的评论总数
  bool is_favorite = 7; // true-已点赞，false-未点赞
  string title = 8; // 视频标题
}